--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Start your development with Meyawo landing page.">
-    <meta name="author" content="Devcrud">
     <title>Nazal Portfolio</title>
     <!-- font icons -->
     <link rel="stylesheet" href="/Public/assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
-	<link rel="stylesheet" href="/Public/assets/css/portfolio.css">
+	<link rel="stylesheet" href="/Public/assets/css/index.css">
 
 
     <script type="text/javascript"
@@ -268,7 +266,7 @@
             <div class="social-links text-right m-auto ml-sm-auto">
                 <a href="javascript:void(0)" class="link"><i class="ti-linkedin"></i></a>
                 <a href="https://github.com/nazalbinhamza" class="link"><i class="ti-github"></i></a>
-                <a href="https://gmail.com" class="link"><i class="ti-google"></i></a>
+                <a href="https://mohammednazalali@gmail.com" class="link"><i class="ti-google"></i></a>
                 <a href="https://instagram.com/nn.azal?igshid=NGVhN2U2NjQ0Yg==" class="link"><i class="ti-instagram"></i></a>
                 <a href="http://wa.me/8921122135" class="link"><i class="ti-themify-favicon-alt"></i></a>
             </div>
