--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Nazal Portfolio</title>
     <!-- font icons -->
-    <link rel="stylesheet" href="../Public/assets/vendors/themify-icons/css/themify-icons.css">
+    <link rel="stylesheet" href="Public/assets/vendors/themify-icons/css/themify-icons.css">
     <!-- Bootstrap + Meyawo main styles -->
-	<link rel="stylesheet" href="../Public/assets/css/portfolio.css">
+	<link rel="stylesheet" href="Public/assets/css/portfolio.css">
 
 </head>
 <body data-spy="scroll" data-target=".navbar" data-offset="40" id="home">
