add: new changes

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <!-- about wrapper -->
             <div class="about">
                 <div class="about-img-holder">
-                    <img src="/Public/assets/imgs/me.jpg" class="about-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                    <img src="Public/assets/imgs/me.jpg" class="about-img" alt="Image">
                 </div>
                 <div class="about-caption">
                     <p class="section-subtitle">Who Am I ?</p>
@@ -85,7 +85,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
-                        <img src="/Public/assets/imgs/usebook1.png" class="portfolio-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">    
+                        <img src="Public/assets/imgs/usebook1.png" class="portfolio-card-img" alt="Image">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>Social App</h5>
@@ -96,7 +96,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
-                        <img class="portfolio-card-img" src="/Public/assets/imgs/Babyshop.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img class="portfolio-card-img" src="Public/assets/imgs/Babyshop.png" class="img-responsive rounded" alt="Image">
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>E-Commerce</h5>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
-                        <img class="portfolio-card-img" src="/Public/assets/imgs/portfolio.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">    
+                        <img class="portfolio-card-img" src="Public/assets/imgs/portfolio.png" class="img-responsive rounded" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">    
                         <span class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>Portfolio</h5>
@@ -197,7 +197,7 @@
             <!-- blog-wrapper -->
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <img src="/Public/assets/imgs/usebook1.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                    <img src="Public/assets/imgs/usebook1.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                 </div>
                 <div class="blog-card-body">
                     <h5 class="blog-card-title">USEBOOK</h6>
@@ -211,7 +211,7 @@
             <!-- blog-wrapper -->
             <div class="blog-card">
                 <div class="blog-card-header">
-                    <img src="/Public/assets/imgs/Babyshop.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                    <img src="Public/assets/imgs/Babyshop.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                 </div>
                 <div class="blog-card-body">
                     <h5 class="blog-card-title">Babify</h6>
@@ -264,14 +264,14 @@
     </div> <!-- end of page footer -->
 	
 	<!-- core  -->
-    <script src="/Public/assets/vendors/jquery/jquery-3.4.1.js"></script>
-    <script src="/Public/assets/vendors/bootstrap/bootstrap.bundle.js"></script>
+    <script src="Public/assets/vendors/jquery/jquery-3.4.1.js"></script>
+    <script src="Public/assets/vendors/bootstrap/bootstrap.bundle.js"></script>
 
     <!-- bootstrap 3 affix -->
-	<script src="/Public/assets/vendors/bootstrap/bootstrap.affix.js"></script>
+	<script src="Public/assets/vendors/bootstrap/bootstrap.affix.js"></script>
 
     <!-- Portfolio js -->
-    <script src="/Public/assets/js/portfolio.js"></script>
+    <script src="Public/assets/js/portfolio.js"></script>
 
 </body>
 </html>
