--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <div class="col-md-4">
                     <a href="#" class="portfolio-card">
                         <img class="portfolio-card-img" src="Public/assets/imgs/Babyshop.png" class="img-responsive rounded" alt="Image">
-                        <span class="portfolio-card-overlay">
+                        <span href="https://lnkd.in/g8YU-Cdj"  class="portfolio-card-overlay">
                             <span class="portfolio-card-caption">
                                 <h4>E-Commerce</h5>
                                 <p class="font-weight-normal">Using: React.js</p>
